# Boomerang

./: .gitignore  Cargo.toml  Makefile  README.md  curve-gen.sage
.github/workflows/: audit.yml  lint.yml  make.yml  rust.yml
acl/: Cargo.toml  config.rs
acl/src/: config.rs  lib.rs  sign.rs  verify.rs
boomerang/: Cargo.toml
boomerang/src/: client.rs  config.rs  lib.rs  server.rs  utils.rs
bulletproofs/: Cargo.toml
bulletproofs/benches/: generators.rs  r1cs_secq256k1.rs
bulletproofs/src/: errors.rs  generators.rs  inner_product_proof.rs  lib.rs  linear_proof.rs  transcript.rs  util.rs
bulletproofs/src/r1cs/: constraint_system.rs  proof.rs  prover.rs  verifier.rs
bulletproofs/src/range_proof/: dealer.rs  messages.rs  mod.rs  party.rs
bulletproofs/tests/: r1cs_curve25519.rs  r1cs_secq256k1.rs
demo/: Cargo.toml
demo/examples/: cert.pem  client.rs  server.rs
end2end-example/client/: Cargo.toml
end2end-example/client/benches/: client_benchmark.rs
end2end-example/client/src/: main.rs
end2end-example/server/: Cargo.toml
end2end-example/server/src/: main.rs
macros/: Cargo.toml
macros/src/: bench_tacl.rs  bench_tboomerang.rs  bench_tcurve.rs  derive_conversion.rs  lib.rs  test_acl.rs  test_boomerang.rs  test_pedersen.rs
pedersen/: Cargo.toml
pedersen/src/: add_mul_protocol.rs  cdls_point_add_protocol.rs  cdls_scalar_mul_protocol.rs  ec_point_add_protocol.rs  ecdsa_protocol.rs  equality_protocol.rs  fs_cdls_scalar_mul_protocol.rs  fs_scalar_mul_protocol.rs  fs_zk_attest_scalar_mul_protocol.rs  gk_zero_one_protocol.rs  interpolate.rs  issuance_protocol.rs  lib.rs  main.rs  mul_protocol.rs  opening_protocol.rs  pedersen_config.rs  point_add.rs  product_protocol.rs  scalar_mul.rs  scalar_mul_proof.rs  scalar_mul_protocol.rs  transcript.rs  zk_attest_point_add_protocol.rs  zk_attest_scalar_mul_protocol.rs
rewards-proof/: Cargo.toml
rewards-proof/benches/: proofs_benchmark.rs
rewards-proof/examples/: example_proofs.rs
rewards-proof/src/: api.rs  lib.rs
sage/: curve-gen.sage
src/pedersen/: Cargo.toml
src/pedersen/src/: ec_point_add_protocol.rs  equality_protocol.rs  lib.rs  mul_protocol.rs  opening_protocol.rs  pedersen_config.rs  transcript.rs
src/t256/: Cargo.toml
src/t256/arithmetic/field/: t256_32.rs  t256_64.rs
src/t256/arithmetic/scalar/: t256_scalar_32.rs  t256_scalar_64.rs
src/t256/src/constraints/: curves.rs  fields.rs
src/t256/src/curves/: mod.rs  tests.rs
src/t256/src/fields/: fq.rs
src/t384/: Cargo.toml
src/t384/src/: lib.rs
src/t384/src/constraints/: curves.rs
src/t384/src/curves/: mod.rs  tests.rs
src/t384/src/fields/: fq.rs
t256/: Cargo.toml
t256/benches/: bench_tacl.rs  bench_tboomerang.rs  bench_tcurve.rs
t256/src/: lib.rs
t256/src/curves/: mod.rs  tests.rs
t256/src/e2e/: client.rs  key.pem  server.rs
t256k1/: Cargo.toml
t256k1/src/: lib.rs
t256k1/src/curves/: mod.rs  tests.rs
t256k1/src/fields/: fq.rs  fr.rs
t256r1/: Cargo.toml
t256r1/src/: lib.rs
t256r1/src/curves/: mod.rs
t384/: Cargo.toml
t384/benches/: bench_tacl.rs  bench_tboomerang.rs  bench_tcurve.rs
t384/src/: lib.rs
t384/src/constraints/: fields.rs
t384/src/curves/: mod.rs  tests.rs
tests/: Cargo.toml
tests/src/: lib.rs  test_pedersen.rs
tsecp256k1/: Cargo.toml  generator.sage
tsecp256k1/benches/: bench_tacl.rs  bench_tboomerang.rs  bench_tcurve.rs
tsecp256k1/src/: lib.rs
tsecp256k1/src/constraints/: mod.rs
tsecp256k1/src/curves/: mod.rs  tests.rs
tsecq256k1/: Cargo.toml
tsecq256k1/benches/: bench_tacl.rs  bench_tboomerang.rs  bench_tcurve.rs
tsecq256k1/src/: generator.sage  lib.rs
tsecq256k1/src/curves/: mod.rs  tests.rs
tsecq256k1/src/fields/: fq.rs  fr.rs
