[package]
name = "boomerang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
pedersen = { path="../pedersen" }
acl = { path="../acl" }
rand = { version = "0.8.5" }
ark-ff = { version = "0.4.2"}
ark-serialize = { version = "0.4.2"}
merlin = { version = "3.0.0"}
num-bigint = { version = "0.4", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
digest = { version = "0.9.0", default-features = false }
