[package]
name = "rewards-proof"
version = "0.0.1"
edition = "2021"
authors = ["Ralph Ankele <rankele@brave.com>"]

[dependencies]
ark-bulletproofs = { path="../bulletproofs" }
merlin = { version = "3", default-features = false }
rand = { version = "0.8" }
ark-ec = { version = "0.4.0" }
ark-ff = { version = "0.4.0" }
ark-std = { version = "0.4.0" }
ark-serialize = { version = "0.4.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ark-secp256k1 = { version = "0.4.0" }
ark-secq256k1 = { version = "0.4.0" }

[[bench]]
name = "proofs_benchmark"
harness = false
