[package]
name = "t256"
version = "0.0.1-alpha.1"
description = "A package implementing T256"
include = ["Cargo.toml", "src"]
edition = "2021"

[dependencies]
ark-ff = { version = "0.4.2", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false, optional = true }
ark-std = { version = "0.4.0", default-features = false }
ark-secp256r1 = {default-features = false, git = "https://github.com/arkworks-rs/curves" }
ark-serialize = { version = "0.4.2", default-features = false }
pedersen = { path="../pedersen" }
acl = { path="../acl" }
boomerang = { path="../boomerang" }
boomerang-macros = { path="../macros"}
rand = { version = "0.8.5" }
rand_core = { version = "0.6.4" }
merlin = { version = "3.0.0" }
ark-ff-macros =  { version = "0.4.2", default-features = false }
sha2 = "0.10.8"
axum = "0.7"  # or the latest version
axum-server = { version = "0.6", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"  # Ensure you have tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = "0.21"
rustls-pemfile = "2.0"
tokio-stream = { version = "0.1", features = ["net"] }
tower = "0.4"
bincode = "1.3"
lazy_static = "1.4.0"

[dev-dependencies]
ark-relations = { version = "0.4.0", default-features = false }
ark-algebra-test-templates = { version = "0.4.2", default-features = false }
ark-algebra-bench-templates = { version = "0.5.0-alpha", default-features = false }
ark-curve-constraint-tests = {version = "0.4.0", default-features = false }
ark-secp256r1 = {default-features = false, git = "https://github.com/arkworks-rs/curves" }
criterion = "0.5.1"
sha2 = "0.10.8"

[[bench]]
name = "bench_tcurve"
harness = false

[[bench]]
name = "bench_tacl"
harness = false

[[bench]]
name = "bench_tboomerang"
harness = false

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]
r1cs = [ "ark-r1cs-std" ]

[[bin]]
name = "server"
path = "src/e2e/server.rs"

[[bin]]
name = "client"
path = "src/e2e/client.rs"
