[package]
name = "tsecp256k1"
version = "0.4.0"
authors = [ "arkworks contributors" ]
description = "The secp256k1 curve"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/algebra"
documentation = "https://docs.rs/ark-secp256k1/"
keywords = ["cryptography", "finite-fields", "elliptic-curves" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]

ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false, optional = true }
ark-std = { version = "0.4.0", default-features = false }
ark-secp256k1 = {version ="0.4.0", default-features = false}
ark-ff-macros =  { version = "0.4.2", default-features = false }
rand_core = { version = "0.6.4" }
merlin = { version = "3.0.0" }
sha2 = "0.10.8"
pedersen = { path="../pedersen" }
acl = { path="../acl" }
boomerang = { path="../boomerang" }
boomerang-macros = { path="../macros"}

[dev-dependencies]
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-algebra-test-templates = { version = "0.4.0", default-features = false }
ark-algebra-bench-templates = { version = "0.4.0", default-features = false }
ark-secp256k1 = {version ="0.4.0", default-features = false}
criterion = "0.5.1"
sha2 = "0.10.8"

[[bench]]
name = "bench_tcurve"
harness = false

[lib]
bench = false

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]
r1cs = [ "ark-r1cs-std" ]