[package]
name = "client"
version = "0.0.1"
authors = ["Ralph Ankele <rankele@brave.com>"]
edition = "2021"

[dependencies]
boomerang = { path = "../../boomerang" }
t256 = { path = "../../t256" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.15", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand_core = { version = "0.6.4" }
ark-serialize = { version = "0.4.2", default-features = false }

#[dev-dependencies]
#criterion = { version = "0.4", features = ["html_reports", "async", "async_tokio"] }

#[[bench]]
#name = "client_benchmark"
#harness = false
