[package]
name = "server"
version = "0.0.1"
authors = ["Ralph Ankele <rankele@brave.com>"]
edition = "2021"

[dependencies]
boomerang = { path = "../../boomerang" }
t256 = { path = "../../t256" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand_core = { version = "0.6.4" }
ark-serialize = { version = "0.4.2", default-features = false }
